# bee

./: .cspell-dict.txt  .cspell.json  .editorconfig  .gitignore  .markdownlint.jsonc  .prettierignore  .prettierrc.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCUSSIONS.md  GOOD_FIRST_ISSUES.md  GOVERNANCE.md  LICENSE  PROJECT_BOARD.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  mkdocs.yml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labels.yml
.github/ISSUE_TEMPLATE/: config.yml  content_error.yml  content_request.yml
.github/workflows/: ci.yml  docs-deploy.yml  examples-test.yml  labels.yml  pr-title.yml  release.yml  stale.yml
architectures/: README.md  rag-chatbot.md
architectures/adr/: 0001-provider-strategy.md
assets/: brand.md
benchmarks/: README.md
datasets/: README.md
docs/: CNAME  faq.md  glossary.md  index.md  requirements.txt
docs/agents/: fundamentals.md  index.md  mcp.md  memory.md  multi-agent.md
docs/concepts/: embeddings.md  how-llms-work.md  index.md  tokenization.md  transformers.md
docs/contributing/: index.md
docs/deployment/: index.md
docs/evaluation/: index.md  llm-as-judge.md
docs/getting-started/: first-llm-call.md  index.md  setup.md
docs/learning-paths/: index.md
docs/mlops/: index.md
docs/prompting/: function-calling.md  index.md  prompt-engineering.md  structured-outputs.md  system-prompts.md
docs/rag/: chunking.md  evaluation.md  hybrid-search-reranking.md  index.md  vector-databases.md
docs/security/: index.md  prompt-injection.md
docs/speech/: index.md  speech-to-text.md  text-to-speech.md
docs/vision/: ocr.md  (+2 more)
examples/: README.md
examples/01-chatbot/: .env.example  README.md  pyproject.toml
examples/01-chatbot/app/: __init__.py  __main__.py
examples/01-chatbot/tests/: test_chatbot.py
examples/02-rag-document-qa/: .env.example  README.md  pyproject.toml
examples/02-rag-document-qa/app/: __init__.py  __main__.py  rag.py
examples/02-rag-document-qa/data/: sample.md
examples/02-rag-document-qa/tests/: test_rag.py
examples/04-meeting-summarizer/: .env.example  README.md  pyproject.toml
examples/04-meeting-summarizer/app/: __init__.py  __main__.py  summarizer.py
examples/04-meeting-summarizer/data/: sample_transcript.txt
examples/04-meeting-summarizer/tests/: test_summarizer.py
examples/_TEMPLATE/: .env.example  README.md  pyproject.toml
examples/_TEMPLATE/app/: __init__.py  __main__.py
examples/_TEMPLATE/tests/: test_app.py
guides/: README.md  stream-responses.md
scripts/: README.md  check.sh  new-example.sh
templates/: README.md
templates/fastapi-llm-service/: .env.example  README.md  pyproject.toml
templates/fastapi-llm-service/app/: __init__.py  main.py
tutorials/: README.md  build-rag-from-scratch.md
(+8 files in other folders)
