[project]
name = "bee-example-rag-document-qa"
version = "0.1.0"
description = "Minimal RAG document Q&A with citations — a Bee example."
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40,<1.0",
    "python-dotenv>=1.0,<2.0",
    "sentence-transformers>=3.0,<4.0",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
