[project]
name = "bee-example-meeting-summarizer"
version = "0.1.0"
description = "Map-reduce meeting summarizer with structured action items — a Bee example."
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40,<1.0",
    "python-dotenv>=1.0,<2.0",
    "pydantic>=2.0,<3.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
