[project]
name = "bee-example-template"
version = "0.1.0"
description = "A Bee example — copy and customize."
requires-python = ">=3.10"
# Pin dependencies so the example stays reproducible. Update via Dependabot PRs.
dependencies = [
    "anthropic>=0.40,<1.0",
    "python-dotenv>=1.0,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
