[project]
name = "fastapi-llm-service"
version = "0.1.0"
description = "Starter: a streaming LLM API with FastAPI."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "anthropic>=0.40,<1.0",
    "python-dotenv>=1.0,<2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
